docker and docker compose fixed

--- a/SemanixBackend/docker-compose.yml
+++ b/SemanixBackend/docker-compose.yml
@@ -4,3 +4,9 @@ services:
     build:
       context: .
       dockerfile: src/Services/AccessManagement/AccessManagement.Api/Dockerfile
+
+  requestmanagement.api:
+    image: ${DOCKER_REGISTRY-}requestmanagementapi
+    build:
+      context: .
+      dockerfile: src/Services/RequestManagement/RequestManagement.Api/Dockerfile
