--- a/SemanixBackend/src/Services/AccessManagement/AccessManagement.Api/Dockerfile
+++ b/SemanixBackend/src/Services/AccessManagement/AccessManagement.Api/Dockerfile
@@ -11,21 +11,21 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["AccessManagement.Api.csproj", "./"]
-COPY ["../AccessManagement.Application/AccessManagement.Application.csproj", "../AccessManagement.Application/"]
-COPY ["../AccessManagement.Domain/AccessManagement.Domain.csproj", "../AccessManagement.Domain/"]
-COPY ["../AccessManagement.Infrastructure/AccessManagement.Infrastructure.csproj", "../AccessManagement.Infrastructure/"]
-RUN dotnet restore "./AccessManagement.Api.csproj"
-COPY . .
-COPY ["../AccessManagement.Application/", "../AccessManagement.Application/"]
-COPY ["../AccessManagement.Domain/", "../AccessManagement.Domain/"]
-COPY ["../AccessManagement.Infrastructure/", "../AccessManagement.Infrastructure/"]
-RUN dotnet build "AccessManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+COPY ["src/Services/AccessManagement/AccessManagement.Api/AccessManagement.Api.csproj", "src/Services/AccessManagement/AccessManagement.Api/"]
+COPY ["src/Services/AccessManagement/AccessManagement.Application/AccessManagement.Application.csproj", "src/Services/AccessManagement/AccessManagement.Application/"]
+COPY ["src/Services/AccessManagement/AccessManagement.Domain/AccessManagement.Domain.csproj", "src/Services/AccessManagement/AccessManagement.Domain/"]
+COPY ["src/Services/AccessManagement/AccessManagement.Infrastructure/AccessManagement.Infrastructure.csproj", "src/Services/AccessManagement/AccessManagement.Infrastructure/"]
+RUN dotnet restore "src/Services/AccessManagement/AccessManagement.Api/AccessManagement.Api.csproj"
+COPY ["src/Services/AccessManagement/AccessManagement.Api/", "src/Services/AccessManagement/AccessManagement.Api/"]
+COPY ["src/Services/AccessManagement/AccessManagement.Application/", "src/Services/AccessManagement/AccessManagement.Application/"]
+COPY ["src/Services/AccessManagement/AccessManagement.Domain/", "src/Services/AccessManagement/AccessManagement.Domain/"]
+COPY ["src/Services/AccessManagement/AccessManagement.Infrastructure/", "src/Services/AccessManagement/AccessManagement.Infrastructure/"]
+RUN dotnet build "src/Services/AccessManagement/AccessManagement.Api/AccessManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "AccessManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "src/Services/AccessManagement/AccessManagement.Api/AccessManagement.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
