--- a/deployment/k8s/argocd/application.yaml
+++ b/deployment/k8s/argocd/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: semantix-backend
+  name: semanix-backend
   namespace: argocd
 spec:
   project: default
@@ -11,7 +11,7 @@ spec:
     path: helm/charts
   destination:
     server: https://kubernetes.default.svc
-    namespace: semantix
+    namespace: semanix
   syncPolicy:
     automated:
       prune: true
