--- a/deployment/k8s/overlays/dev/kustomization.yaml
+++ b/deployment/k8s/overlays/dev/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
 - ../../base
 
-namespace: semantix-dev
+namespace: semanix-dev
 
 patches:
 - path: patches/resources.yaml 
