--- a/deploy/k8s/argocd/ingress.yaml
+++ b/deploy/k8s/argocd/ingress.yaml
@@ -3,16 +3,12 @@ kind: Ingress
 metadata:
   name: argocd-server-ingress
   namespace: argocd
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
-  ingressClassName: nginx
   rules:
   - host: 20-172-64-77.nip.io
     http:
       paths:
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
