--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,14 +81,20 @@ jobs:
       matrix:
         service: [accessmanagementapi, requestmanagementapi]
     steps:
+    - name: Login to ACR
+      uses: docker/login-action@v2
+      with:
+        registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
+        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+    - name: Pull ${{ matrix.service }} image locally
+      run: docker pull ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
     - name: Scan ${{ matrix.service }} image for vulnerabilities
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
         format: 'sarif'
         output: 'trivy-${{ matrix.service }}-results.sarif'
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
   update-helm-charts:
     needs: build-and-push-docker
