--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,9 +112,21 @@ jobs:
       run: |
         helm package ./deploy/helm/charts/accessmanagement -d ./deploy/helm/releases
         helm package ./deploy/helm/charts/requestmanagement -d ./deploy/helm/releases
-        az acr login --name ${{ secrets.AZURE_REGISTRY_NAME }}
-        helm push ./deploy/helm/releases/accessmanagement-*.tgz oci://
-        helm push ./deploy/helm/releases/requestmanagement-*.tgz oci://
+
+    - name: Login to ACR with Docker
+      uses: docker/login-action@v2
+      with:
+        registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
+        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
+    - name: Login to Helm OCI Registry
+      run: helm registry login ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
+
+    - name: Push Helm charts to ACR OCI registry
+      run: |
+        helm push ./deploy/helm/releases/accessmanagement-*.tgz oci://${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm
+        helm push ./deploy/helm/releases/requestmanagement-*.tgz oci://${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm
 
     - name: Commit and push changes
       run: |
@@ -122,7 +134,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add ./deploy/helm/releases
         git commit -m "Update Helm charts" || echo "No changes to commit"
-        git push 
+        git push
 
   sync-argocd:
     needs: update-helm-charts
