--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,30 +79,30 @@ jobs:
           ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/requestmanagementapi:latest
 
     # Security scan both service images in parallel via matrix
-  scan-images:
-    needs: build-and-push-docker
-    runs-on: [self-hosted, azure]
-    strategy:
-      matrix:
-        service: [accessmanagementapi, requestmanagementapi]
-    steps:
-    - name: Login to ACR
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-    - name: Pull ${{ matrix.service }} image locally
-      run: docker pull ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
-    - name: Scan ${{ matrix.service }} image for vulnerabilities
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
-        format: 'sarif'
-        output: 'trivy-${{ matrix.service }}-results.sarif'
+  # scan-images:
+  #   needs: build-and-push-docker
+  #   runs-on: [self-hosted, azure]
+  #   strategy:
+  #     matrix:
+  #       service: [accessmanagementapi, requestmanagementapi]
+  #   steps:
+  #   - name: Login to ACR
+  #     uses: docker/login-action@v2
+  #     with:
+  #       registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
+  #       username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+  #       password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+  #   - name: Pull ${{ matrix.service }} image locally
+  #     run: docker pull ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
+  #   - name: Scan ${{ matrix.service }} image for vulnerabilities
+  #     uses: aquasecurity/trivy-action@master
+  #     with:
+  #       image-ref: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
+  #       format: 'sarif'
+  #       output: 'trivy-${{ matrix.service }}-results.sarif'
 
   update-helm-charts:
-    needs: scan-images
+    needs: build-and-test
     runs-on: [self-hosted, azure]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
