--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,29 +78,6 @@ jobs:
         tags: |
           ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/requestmanagementapi:latest
 
-    # Security scan both service images in parallel via matrix
-  # scan-images:
-  #   needs: build-and-push-docker
-  #   runs-on: [self-hosted, azure]
-  #   strategy:
-  #     matrix:
-  #       service: [accessmanagementapi, requestmanagementapi]
-  #   steps:
-  #   - name: Login to ACR
-  #     uses: docker/login-action@v2
-  #     with:
-  #       registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
-  #       username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-  #       password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-  #   - name: Pull ${{ matrix.service }} image locally
-  #     run: docker pull ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
-  #   - name: Scan ${{ matrix.service }} image for vulnerabilities
-  #     uses: aquasecurity/trivy-action@master
-  #     with:
-  #       image-ref: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${{ matrix.service }}:latest
-  #       format: 'sarif'
-  #       output: 'trivy-${{ matrix.service }}-results.sarif'
-
   update-helm-charts:
     needs: build-and-test
     runs-on: [self-hosted, azure]
@@ -146,7 +123,7 @@ jobs:
         git push
 
   sync-argocd:
-    needs: update-helm-charts
+    needs: [update-helm-charts, build-and-push-docker]
     runs-on: [self-hosted, azure]
     steps:
     - uses: actions/checkout@v3
@@ -163,6 +140,10 @@ jobs:
       run: |
         sudo argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
 
+    - name: Create Service Accounts
+      run: |
+        kubectl apply -f ./deploy/k8s/service-accounts.yaml
+
     - name: Add Helm Repository to ArgoCD
       run: |
         sudo argocd repo add ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm \
@@ -172,18 +153,24 @@ jobs:
           --username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
           --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
-
-    - name: Create and Sync Argo CD Application
+    - name: Create and Sync Access Management Application
       run: |
         # Create the application using Helm chart from registry
-        sudo argocd app create semanix-backend \
-          --repo ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm \
-          --helm-chart accessmanagement \
-          --revision 0.1.0 \
-          --dest-server https://kubernetes.default.svc \
-          --dest-namespace semanix \
-          --upsert
+        export AZURE_REGISTRY_NAME=${{ secrets.AZURE_REGISTRY_NAME }}
+        envsubst < ./deploy/k8s/argocd/accessmanagement-app.yaml > accessmanagement-app-final.yaml
+        sudo argocd app create -f accessmanagement-app-final.yaml --upsert
         
-        # Sync the application after creating it
-        sudo argocd app sync semanix-backend
-        sudo argocd app wait semanix-backend --health --timeout 120
+        # Sync the application
+        sudo argocd app sync semanix-backend-accessmanagement
+        sudo argocd app wait semanix-backend-accessmanagement --health --timeout 180
+
+    - name: Create and Sync Request Management Application
+      run: |
+        # Create the application using Helm chart from registry
+        export AZURE_REGISTRY_NAME=${{ secrets.AZURE_REGISTRY_NAME }}
+        envsubst < ./deploy/k8s/argocd/requestmanagement-app.yaml > requestmanagement-app-final.yaml
+        sudo argocd app create -f requestmanagement-app-final.yaml --upsert
+        
+        # Sync the application
+        sudo argocd app sync semanix-backend-requestmanagement
+        sudo argocd app wait semanix-backend-requestmanagement --health --timeout 180
