--- a/deploy/k8s/service-accounts.yaml
+++ b/deploy/k8s/service-accounts.yaml
@@ -14,4 +14,4 @@ metadata:
   namespace: semanix
   labels:
     app.kubernetes.io/name: requestmanagement
-    app.kubernet
+    app.kubernetes.io/instance: semanix-backend
