--- a/deploy/helm/charts/accessmanagement/values.yaml
+++ b/deploy/helm/charts/accessmanagement/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: accessmanagementapi
+  repository: {{secrets.AZURE_REGISTRY_NAME}}.azurecr.io/accessmanagementapi
   pullPolicy: IfNotPresent
   tag: "latest"
 
