--- a/deploy/helm/charts/accessmanagement/values.yaml
+++ b/deploy/helm/charts/accessmanagement/values.yaml
@@ -1,7 +1,8 @@
 replicaCount: 1
 
+
 image:
-  repository: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/accessmanagementapi
+  repository: samthedonz.azurecr.io/accessmanagementapi
   pullPolicy: IfNotPresent
   tag: "latest"
 
