;atest update to yaml

--- a/deploy/helm/charts/accessmanagement/values.yaml
+++ b/deploy/helm/charts/accessmanagement/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: samthedonz.azurecr.io/accessmanagementapi:latest
+  repository: samthedonz.azurecr.io/accessmanagementapi
   pullPolicy: IfNotPresent
   tag: "latest"
 
