--- a/deploy/helm/charts/accessmanagement/templates/deployment.yaml
+++ b/deploy/helm/charts/accessmanagement/templates/deployment.yaml
@@ -13,10 +13,16 @@ spec:
       {{- include "accessmanagement.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
+        {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
-      {{- end }}
+        {{- end }}
+        {{- if .Values.dapr.enabled }}
+        dapr.io/enabled: "true"
+        dapr.io/app-id: "{{ .Values.dapr.appId }}"
+        dapr.io/app-port: "{{ .Values.dapr.appPort }}"
+        dapr.io/config: "{{ .Values.dapr.config }}"
+        {{- end }}
       labels:
         {{- include "accessmanagement.selectorLabels" . | nindent 8 }}
     spec:
@@ -63,4 +69,4 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
-      {{- end }} 
+      {{- end }}
