--- a/deploy/k8s/argocd/requestmanagement-app.yaml
+++ b/deploy/k8s/argocd/requestmanagement-app.yaml
@@ -3,11 +3,10 @@ kind: Application
 metadata:
   name: semanix-backend-requestmanagement
   namespace: argocd
-  
 spec:
   project: default
   source:
-    repoURL: ${AZURE_REGISTRY_NAME}.azurecr.io/helm
+    repoURL: oci://${AZURE_REGISTRY_NAME}.azurecr.io/helm
     targetRevision: 0.1.0
     chart: requestmanagement
     helm:
@@ -22,7 +21,12 @@ spec:
           value: samthedonz.azurecr.io/requestmanagementapi
         - name: image.tag
           value: latest
-
+      values: |
+        dapr:
+          enabled: true
+          appId: requestmanagement
+          appPort: 8090
+          config: dapr-config
   destination:
     server: https://kubernetes.default.svc
     namespace: semanix
