--- a/deploy/k8s/argocd/requestmanagement-app.yaml
+++ b/deploy/k8s/argocd/requestmanagement-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: oci://${AZURE_REGISTRY_NAME}.azurecr.io/helm
+    repoURL: oci://samthedonz.azurecr.io/helm
     targetRevision: 0.1.0
     chart: requestmanagement
     helm:
