--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,14 @@ on:
   pull_request:
     branches: [ main ]
 
-# Add explicit permissions for GITHUB_TOKEN
 permissions:
   contents: write
   packages: write
+
+env:
+  ACCESSMNGT_CHART_PATH: ./deploy/helm/charts/accessmanagement/Chart.yaml
+  REQUESTMNGT_CHART_PATH: ./deploy/helm/charts/requestmanagement/Chart.yaml
+  AZURE_REGISTRY_HELM_PATH: helm
 
 jobs:
   build-and-test:
@@ -33,27 +37,16 @@ jobs:
     - name: Test
       run: dotnet test SemanixBackend/SemanixBackend.sln --configuration Release --no-build
 
-    # - name: SonarQube Scan
-    #   uses: SonarSource/sonarcloud-github-action@master
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    #   with:
-    #     args: >
-    #       -Dsonar.projectKey=semantixbackend
-    #       -Dsonar.organization=semantixbackend
-
   build-and-push-docker:
     needs: build-and-test
     runs-on: [self-hosted, azure]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Login to Container Registry
+    - name: Login to Azure Container Registry
       uses: docker/login-action@v2
       with:
         registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
@@ -81,7 +74,6 @@ jobs:
   update-helm-charts:
     needs: build-and-push-docker
     runs-on: [self-hosted, azure]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v3
 
@@ -90,27 +82,26 @@ jobs:
       with:
         version: '3.11.0'
 
+    - name: Read Helm Chart Versions
+      id: read_versions
+      run: |
+        echo "ACCESSMNGT_VERSION=$(grep '^version:' $ACCESSMNGT_CHART_PATH | awk '{print $2}')" >> $GITHUB_ENV
+        echo "REQUESTMNGT_VERSION=$(grep '^version:' $REQUESTMNGT_CHART_PATH | awk '{print $2}')" >> $GITHUB_ENV
+
     - name: Package Helm charts
       run: |
         helm package ./deploy/helm/charts/accessmanagement -d ./deploy/helm/releases
         helm package ./deploy/helm/charts/requestmanagement -d ./deploy/helm/releases
 
-    - name: Login to ACR with Docker
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
     - name: Login to Helm OCI Registry
       run: helm registry login ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io --username ${{ secrets.AZURE_REGISTRY_USERNAME }} --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
-    - name: Push Helm charts to ACR OCI registry
+    - name: Push Helm charts
       run: |
-        helm push ./deploy/helm/releases/accessmanagement-0.1.1.tgz oci://${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm
-        helm push ./deploy/helm/releases/requestmanagement-0.1.1.tgz oci://${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm
-     
-    - name: Commit and push changes
+        helm push ./deploy/helm/releases/accessmanagement-${ACCESSMNGT_VERSION}.tgz oci://${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${AZURE_REGISTRY_HELM_PATH}
+        helm push ./deploy/helm/releases/requestmanagement-${REQUESTMNGT_VERSION}.tgz oci://${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/${AZURE_REGISTRY_HELM_PATH}
+
+    - name: Commit Helm chart release packages
       env:
         REPO_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       run: |
@@ -118,18 +109,17 @@ jobs:
         git config --local user.name "GitHub Action"
         git add ./deploy/helm/releases
         git commit -m "Update Helm charts" || echo "No changes to commit"
-        # Use authenticated HTTPS URL for push
         git remote set-url origin https://x-access-token:${REPO_TOKEN}@github.com/${{ github.repository }}
         git push
 
   sync-argocd:
-    needs: [update-helm-charts, build-and-push-docker]
+    needs: [update-helm-charts]
     runs-on: [self-hosted, azure]
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    
+
     - name: Install Argo CD CLI
       run: |
         curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
@@ -140,37 +130,20 @@ jobs:
       run: |
         sudo argocd login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USER }} --password ${{ secrets.ARGOCD_PASSWORD }} --insecure
 
-    - name: Create Service Accounts
+    - name: Create and Sync Applications
       run: |
-        microk8s kubectl apply -f ./deploy/k8s/service-accounts.yaml
-
-    - name: Add Helm Repository to ArgoCD
-      run: |
-        sudo argocd repo add ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/helm \
-          --type helm \
-          --name azure-helm \
-          --enable-oci \
-          --username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
-          --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
-    - name: Create and Sync Access Management Application
-      run: |
-        # Create the application using Helm chart from registry
         export AZURE_REGISTRY_NAME=${{ secrets.AZURE_REGISTRY_NAME }}
-        envsubst < ./deploy/k8s/argocd/accessmanagement-app.yaml > accessmanagement-app-final.yaml
-        sudo argocd app create -f accessmanagement-app-final.yaml --upsert
+        export ACCESSMNGT_VERSION=${{ env.ACCESSMNGT_VERSION }}
+        export REQUESTMNGT_VERSION=${{ env.REQUESTMNGT_VERSION }}
         
-        # Sync the application
+        envsubst < ./deploy/k8s/argocd/accessmanagement-app.yaml > accessmanagement-app-final.yaml
+        envsubst < ./deploy/k8s/argocd/requestmanagement-app.yaml > requestmanagement-app-final.yaml
+
+        sudo argocd app create -f accessmanagement-app-final.yaml --upsert
+        sudo argocd app create -f requestmanagement-app-final.yaml --upsert
+        
         sudo argocd app sync semanix-backend-accessmanagement
         sudo argocd app wait semanix-backend-accessmanagement --health --timeout 180
 
-    - name: Create and Sync Request Management Application
-      run: |
-        # Create the application using Helm chart from registry
-        export AZURE_REGISTRY_NAME=${{ secrets.AZURE_REGISTRY_NAME }}
-        envsubst < ./deploy/k8s/argocd/requestmanagement-app.yaml > requestmanagement-app-final.yaml
-        sudo argocd app create -f requestmanagement-app-final.yaml --upsert
-        
-        # Sync the application
         sudo argocd app sync semanix-backend-requestmanagement
         sudo argocd app wait semanix-backend-requestmanagement --health --timeout 180
