--- a/deploy/k8s/argocd/requestmanagement-app.yaml
+++ b/deploy/k8s/argocd/requestmanagement-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: samthedonz.azurecr.io/helm
-    targetRevision: 0.1.1
+    targetRevision: ${REQUESTMNGT_VERSION}
     chart: requestmanagement
     helm:
       valueFiles:
